--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div id="box1">
-            <img src="C:/Users/!/Desktop/Web Design/image/ummi.jpg">
+            <img src="ummi.jpg">
             <h1>Safiyah Aliyu</h1>
             <p>ADDRESS:Lungi Barracks</p>
             <p>DATE Of BIRTH: 13 July 2000</p>
